# proto-composer-plugin

./: .prototools  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  proto.rs
tests/: plugin_test.rs
