[package]
name = "composer_tool"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A proto WASM plugin for managing Composer versions"
repository = "https://github.com/KonstantinKai/proto-composer-plugin"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
proto_pdk = "0.32"
schematic = { version = "0.19", default-features = false, features = [
  "schema",
] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proto_pdk_test_utils = "0.43"
starbase_sandbox = "0.10"
tokio = { version = "1", features = ["macros"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
